<resources>
    <string name="app_name">master</string>

    <string name="continuar">CONTINUAR</string>
    <string name="volver">VOLVER</string>
    <string name="inicio">INICIO</string>

    <string name="previo">PREVIO</string>
    <string name="preparativos">PREPARATIVOS</string>
    <string name="creacionvelada">CREACIÓN DE LA VELADA</string>
    <string name="diavelada">DÍA DE LA VELADA</string>
    <string name="utilidades">UTILIDADES</string>

    <string name="bienvenida">BIENVENIDA AL MASTER</string>
    <string name="descripcion">DESCRIPCIÓN DE LA ACTIVIDAD</string>
    <string name="preparar">CÓMO PREPARAR LA VELADA</string>
    <string name="listatareas">LISTA DE TAREAS</string>

    <string name="planifica">PLANIFICA LA VELADA</string>
    <string name="preparacion">PREPARACIÓN DEL ESPACIO</string>
    <string name="creacion">CREACIÓN DE LA PARTIDA</string>

    <string name="imprimibles">OBJETOS IMPRIMIBLES</string>
    <string name="temporizador">TEMPORIZADOR</string>
    <string name="enviarvideo">ENVIAR VÍDEO A TV</string>

    <string name="alarma">Dentro de 90 minutos sonará la alarma</string>
    <string name="alarmaTitulo">MUERTE DEL SEÑOR WHITE</string>
    <string name="alarmaTexto">Deberías ausentarte para preparar la muerte del señor White</string>


    <string name="titulo1">¡Bienvenido anfitrión!</string>
    <string name="texto1">Estás a punto de entrar en un juego de misterio y crimen en el que te garantizo que tú y los tuyos pasareis una velada única, llena de momentos de intriga y suspense, amenizada siempre con contenidos propios de la época en la que se desarrolla esta intrigante historia. Sigue adelante y comienza con los preparativos para crear una noche de aventura, misterio y diversión en compañía de las personas que tú elijas.\n\n¿PERO CÓMO VA A SER?\n\n¿QUÉ VA A OCURRIR?</string>
    <string name="titulo2">Descripción de la actividad</string>
    <string name="texto2">Como anfitrión deberás elegir a un grupo de jugadores (entre 8 a 16 personas) a las cuales invitarás a una cena de época ambientada en una mansión de la Inglaterra de 1920, en la que, desgraciadamente, morirás.\n\nUna vez ocurra esto, comenzará un juego de investigación de 90 minutos, que será explicado a través de un video de presentación, que guiará toda la velada de manera muy intuitiva y divertida, ya que estará llena de sorpresas y eventos que ayudarán a meterse en el ambiente de la época.\n\nTu serás el anfitrión de esta velada y la persona encargada de preparar gran parte de la experiencia. Pero no te preocupes, te ayudaremos en ello y te guiaremos paso a paso en todo el proceso.\n\n\n\n¿Y CÓMO LO HAGO?</string>
    <string name="titulo3">Cómo preparar la velada</string>
    <string name="texto3">Como anfitrión de una noche memorable, tendrás que encargarte de los preparativos más insospechados relacionados con todo tipo de artilugios, distracciones y sobre todo, acciones misteriosas. Pero no te preocupes, ya que te ayudaremos en todas y cada una de ellas para que puedas disfrutar de esta experiencia. Serás el único que tendrá el control de la situación, el único que sabrá lo que va a ocurrir, y sobre todo vivirás tu propia muerte desde fuera. ¿Quién habrá sido?\n\nPara facilitarte los preparativos, he preparado una lista de tareas que simplificarán cada una de las acciones que deberás llevar a cabo. Pero antes de nada, sólo quiero recordarte que aunque no lo creas, TODO ESTO ES MUCHO MÁS FÁCIL DE LO QUE PARECE.\n\nDeberás completar por orden cada uno de los puntos de la siguiente lista, y no avanzar al siguiente hasta que hayas revisado el anterior. En alguno de los puntos, también dispondrás de un video explicativo para clarificar cualquier duda.\n\n\n\nSIN MÁS, COMENCEMOS CON LOS PREPARATIVOS...</string>
    <string name="titulo51">Planifica la velada pensando en tus invitados</string>
    <string name="texto51">1. Elige a los invitados a esta cena evento, personas que sabes que querrán participar de manera activa en un juego de rol en vivo. Cuanto más se metan en el papel mejor lo pasareis. No es importante la experiencia, pero si la actitud.\n\n2. Piensa en una fecha y hora que haga posible que los invitados puedan asistir. Es importante hacerlo con suficiente antelación tanto para que los invitados puedan organizarse como para que puedan preparar sus papeles y personajes.\n\n3. Elige el lugar, es importante, ya que tendrás que disponer de sillas para todos los asistentes y de una mesa lo suficientemente grande. La actividad se puede realizar en cualquier piso o casa en la que todos los invitados puedan sentarse a cenar en la misma mesa y en cuya misma habitación dispongas de un televisor con conexión a Internet y Youtube (esto se explica a continuación)</string>
    <string name="titulo52">Preparación del espacio y de los materiales</string>
    <string name="texto52">1. Preparación y del espacio: Coloca el mismo número de sillas que de invitados y una mesa o mesas alineadas de modo que todo el mundo pueda verse la cara. Ambienta los espacios con objetos antiguos en las distintas estancias (espacios prioritarios, entrada de la casa y salón de la cena). La Iluminación debe de ser pobre, basada en velas o candelabros y la Tv con el video de la chimenea (los ojos rápidamente se acostumbran). Imprime el cartel para colocar en la puerta por fuera de la casa (Mansión Familia White). No te preocupes por la música de la época, ya que el video del fuego de la chimenea dispone de ella.\n\n\n\n2. Preparación de los materiales: Para que la investigación pueda llevarse a cabo, deberás imprimir las tarjetas de los objetos con sus respectivos códigos QR y pegarlos en los diferentes espacios de la casa, de modo que no queden a simple vista, sino que las personas tengan que abrir puertas, agacharse o mirar al techo para poder encontrarlas (te recomiendo usar blu-tack). Usa cinta de papel para marcar la silueta de muerto del cadáver en el suelo de una de las habitaciones (imprime el cartel de prohibido el paso y pégalo en la puerta de esa habitación antes de que lleguen los invitados). Imprime el testamento y déjalo al lado de la silueta, junto a la ropa que usarás luego para cambiarte. Enciende la TV y prepara el video. Tendrás que comenzar a reproducirlo justo antes de que entre el primer invitado.\n\nLas acciones requeridas en el siguiente listado se pueden realizar desde el boton UTILIDADES\n\nSillas: tantas como personas asistan a la cena. Elementos de iluminación tenues: velas, candelabros, luces led en forma de velas. \n\nConstruye tu propia chimenea: te explicamos cómo crear una chimenea que cubra tu TV y contribuya a crear un ambiente de salón inglés. IMPRIMIR \n\nCartel de Bienvenida a la Mansión de la Familia White: Imprímelo y colócalo en la entrada de la casa. \n\nTarjetas de objetos: imprímelas, puedes plastificarlas para hacerlas más resistentes. Tienen un objeto único y un código QR que será escaneado durante el juego. Usa blu-tack para pegarlos sin dejar marcas. \n\nCinta de papel adhesiva: (como las que usan los pintores) la usarás utilizarás para crear una silueta en el suelo que identifique el lugar el asesinato. \n\nCartel de prohibido el paso: imprímelo y pégalo en la habitación donde vaya a estar la silueta. Evitará que entren por error los invitados y tendrás así un espacio donde colocar las cosas relacionadas con los preparativos. \n\nRopa para cambiarte: Una vez sea asesinado el anfitrión, deberás cambiarte de ropa y dejar las prendas dentro de la silueta. Por eso necesitas ropa para cambiarte.\n\nTestamento: Imprime el testamento, dóblalo y colócalo entre las ropas del anfitrión dentro de la silueta.\n\nTelevisión para ver el video en Youtube: Para que toda la actividad se realice, es necesario ver un video en Youtube en tú televisión.</string>
    <string name="tituloDiaVelada">titulo dia velada</string>
    <string name="textoDiaVelada">texto dia velada</string>
</resources>
