<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/p2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.33"
                android:text="@string/bienvenida"
/>

            <Button
                android:id="@+id/p3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.33"
                android:text="@string/descripcion"
/>

            <Button
                android:id="@+id/p4"
                android:layout_width="match_parent"
                android:text="@string/preparar"
                android:layout_height="0dp"
                android:layout_weight="0.33"
                />

            <Button
                android:id="@+id/p5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.33"
                android:text="@string/planifica"
/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/inicio"
                    android:text="@string/inicio"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:background="@drawable/ripple_effect2"
                    android:textColor="@color/colorPrimary"
                    android:layout_weight="0.5" />
                <Button
                    android:id="@+id/volver"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="0.5"
                    android:text="@string/volver"
                    android:background="@drawable/ripple_effect2"
                    android:textColor="@color/colorPrimary"
/>

            </LinearLayout>
        </LinearLayout>

</LinearLayout>