<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"


            >

            <Button
                android:id="@+id/p51"
                android:layout_width="match_parent"
                android:text="@string/imprimibles"
                android:layout_height="0dp"
                android:layout_weight="0.33"
                />

            <Button
                android:id="@+id/p52"
                android:layout_width="match_parent"
                android:text="@string/temporizador"
                android:layout_height="0dp"
                android:layout_weight="0.33"
                />

            <Button
                android:id="@+id/p53"
                android:layout_width="match_parent"
                android:text="@string/enviarvideo"
                android:layout_height="0dp"
                android:layout_weight="0.33"
                />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/inicio"
                    android:text="@string/inicio"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:background="@drawable/ripple_effect2"
                    android:textColor="@color/colorPrimary"
                    android:layout_weight="0.5" />

                <Button
                    android:id="@+id/volver"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="0.5"
                    android:text="@string/volver"
                    android:background="@drawable/ripple_effect2"
                    android:textColor="@color/colorPrimary"
                    />

            </LinearLayout>
        </LinearLayout>
</LinearLayout>