<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="false"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"


        >

        <ScrollView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingBottom="60dp"

                >

                <TextView
                    android:id="@+id/titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo1"
                    android:textSize="40dp" />

                <TextView
                    android:id="@+id/texto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/texto1"
                     />


            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/inicio"
                android:text="@string/inicio"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:background="@drawable/ripple_effect2"
                android:textColor="@color/colorPrimary"
                android:layout_weight="0.5" />
            <Button
                android:id="@+id/volver"
                android:text="@string/volver"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:background="@drawable/ripple_effect2"
                android:textColor="@color/colorPrimary"
                android:layout_weight="0.5" />

            <Button
                android:id="@+id/continuar"
                android:text="@string/continuar"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:background="@drawable/ripple_effect2"
                android:textColor="@color/colorPrimary"
                android:layout_weight="0.5"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>